added put and delete funcionalitites.
